--- a/CHE4071Syllabus_Spring2026.ipynb
+++ b/CHE4071Syllabus_Spring2026.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvf/pNjtWcTP6QPRNk+lP8",
+      "authorship_tag": "ABX9TyOHeyM6ecEI0yZCv7FlZ0wp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,9 @@
         "**CHE 4071 - Process Dynamics and Control**\n",
         "\n",
         "Instructor: Carlos Co<br>\n",
-        "email: carlos.co@uc.edu"
+        "email: carlos.co@uc.edu\n",
+        "\n",
+        "Office hours/Questions:  I respond to emails promptly (typically <5 minutes, and very rarely over 2 hours).  I arrive at every lecture very early often >15 minutes before the start, and stay afterwards for how ever long it takes to answer all questions.  We can also arrange alternative times to meet in person.   "
       ]
     },
     {
